# cours-nouvelles-donnees-site

./: .Rprofile  .gitignore  .nojekyll  README.md  _quarto.yml  administratives.html  administratives.qmd  administratives_exemples.html  administratives_exemples.qmd  custom.scss  download_nlp_reqs.sh  geolocalized_data.html  geolocalized_data.qmd  geolocalized_data_exemples.html  geolocalized_data_exemples.qmd  images.html  images_exemples.html  images_exemples.qmd  index.html  index.qmd  init.sh  introduction.html  nowcasting_exemples.html  nowcasting_exemples.qmd  preview_site.sh  pyproject.toml  references.bib  requirements.txt  robots.txt  rproject.toml  rv_installation.sh  search.json  series_temporelles.html  sitemap.xml  textes.html  textes.qmd  textes_exemples.html  textes_exemples.qmd
.github/workflows/: prod.yml  test.yml
applications/: _ape.ipynb  _ape.qmd  ape.html  ape.qmd  ape_testing_code.py  ape_train.py  app1-init.sh  app2-init.sh  application1.R  application1.html  application1.qmd  application1_data.R  classification_oiseau.ipynb  data.html  data.ipynb  donnees_satellite.ipynb  download-alternative.R  geoparquetize_files.py  init-jupyter.sh  requirements.txt  utils.py
applications/images/: .gitignore  classification_oiseau.ipynb  donnees_satellite.ipynb  init-jupyter.sh  pyproject.toml
applications/nowcasting/: init-jupyter.sh  pyproject.toml  requirements.txt  setup.sh  twitter.ipynb
site_libs/bootstrap/: bootstrap-33f6b32835c6667f0f82d635fe7e5bb7.min.css  bootstrap.min.css
workflows/: prod.yml  test.yml
