[project]
name = "nowcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hvac>=2.4.0",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "twarc>=2.14.1",
    "twarc-csv>=0.7.2",
    "wordcloud>=1.9.5",
]
